--- a/FishFinder/src/app/tab2/tab2.page.html
+++ b/FishFinder/src/app/tab2/tab2.page.html
@@ -1,17 +1,12 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
+    <ion-title>Mapa</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+<ion-content class="ion-padding ion-text-center">
+  <div class="message-container">
+    <ion-icon name="alert-circle-outline" class="message-icon"></ion-icon>
+    <p class="message-text">Funcionalidade ainda não implementada</p>
+  </div>
 </ion-content>
