--- a/FishFinder/src/app/tab3/tab3.page.html
+++ b/FishFinder/src/app/tab3/tab3.page.html
@@ -1,17 +1,18 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
+    <ion-title>Configurações</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+<ion-content class="ion-padding">
+  <ion-list lines="full">
+    <ion-item>
+      <ion-label>Habilitar modo de simulação</ion-label>
+      <ion-toggle slot="end" (ionChange)="toggleSimulationMode($event)" [checked]="isSimulationModeEnabled"></ion-toggle>
+    </ion-item>
+    <ion-item>
+      <ion-label>Isso não faz nada</ion-label>
+      <ion-toggle slot="end"></ion-toggle>
+    </ion-item>
+  </ion-list>
 </ion-content>
