--- a/FishFinder/src/app/tab1/tab1.page.html
+++ b/FishFinder/src/app/tab1/tab1.page.html
@@ -1,4 +1,4 @@
 <app-fish-view [isSimulation]="true" style="height: 100%" *ngIf="isSimulationModeEnabled && !isBluetoothEnabled"></app-fish-view>
-<app-fish-view [isSimulation]="false" style="height: 100%" *ngIf="isBluetoothEnabled"></app-fish-view>
+<app-fish-view [isSimulation]="false" style="height: 100%" *ngIf="!isSimulationModeEnabled && isBluetoothEnabled"></app-fish-view>
 <app-no-device-detected *ngIf="!isBluetoothEnabled && !isSimulationModeEnabled"></app-no-device-detected>
 
