--- a/FishFinder/src/app/sensor-config/sensor-config.component.html
+++ b/FishFinder/src/app/sensor-config/sensor-config.component.html
@@ -1,44 +1,39 @@
 <div id="wrapper" [style.top]="absoluteStyle.top" [style.right]="absoluteStyle.right">
-    <ion-fab>
-      <ion-fab-button id="abrir-configuracoes-sensor">
-        <ion-icon name="menu"></ion-icon>
-      </ion-fab-button>
-    </ion-fab>
-  <ion-modal id="example-modal" #modal trigger="abrir-configuracoes-sensor" >
+  <ion-fab>
+    <ion-fab-button id="abrir-configuracoes-sensor">
+      <ion-icon name="menu"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  <ion-modal id="example-modal" #modal trigger="abrir-configuracoes-sensor">
     <ng-template>
       <div class="wrapper">
         <h1>Configurações do sensor</h1>
-
-        <ion-list >
-          
+        <ion-list>
           <ion-item lines="none">
-          <ion-segment value="Automático" (ionChange)="onSegmentChange($event)">
-            <ion-segment-button value="Automático">
-              <ion-label>Automático</ion-label>
-            </ion-segment-button>
-            <ion-segment-button value="Manual">
-              <ion-label>Manual</ion-label>
-            </ion-segment-button>
-
-          </ion-segment>
-          </ion-item>
-
-          <ion-item>
-            <ion-range text-wrap
-            aria-label="Custom range"
-            [min]="1"
-            [max]="40"
-            [value]="20"
-            [pin]="true"
-            [ticks]="false"
-            [snaps]="true"
-            [disabled]="segmentValue === 'Automático'"
-          ></ion-range>
-          
-
+            <ion-segment [value]="segmentValue" (ionChange)="onSegmentChange($event)">
+              <ion-segment-button value="Automático">
+                <ion-label>Automático</ion-label>
+              </ion-segment-button>
+              <ion-segment-button value="Manual">
+                <ion-label>Manual</ion-label>
+              </ion-segment-button>
+            </ion-segment>
           </ion-item>
           <ion-item>
-
+            <ion-range
+              text-wrap
+              aria-label="Custom range"
+              [min]="1"
+              [max]="40"
+              [value]="manualDepth"
+              [pin]="true"
+              [ticks]="false"
+              [snaps]="true"
+              [disabled]="segmentValue === 'Automático'"
+              (ionChange)="onDepthChange($event)"
+            ></ion-range>
+          </ion-item>
+          <ion-item>
             <ion-segment value="260 kHz">
               <ion-segment-button value="260 kHz">
                 <ion-label>260kHz</ion-label>
@@ -47,9 +42,7 @@
                 <ion-label>455kHz</ion-label>
               </ion-segment-button>
             </ion-segment>
-
           </ion-item>
-
         </ion-list>
       </div>
     </ng-template>
