--- a/FishFinder/src/app/fish-view/fish-view.component.html
+++ b/FishFinder/src/app/fish-view/fish-view.component.html
@@ -1,2 +1,3 @@
-<div #pixiContainer style="height: 100%"></div>
+<app-sensor-info-row></app-sensor-info-row>
+<div #pixiContainer style="height: 92%"></div>
 <app-sensor-config x="150" y="40"></app-sensor-config>
