--- a/FishFinder/src/app/tabs/tabs.page.html
+++ b/FishFinder/src/app/tabs/tabs.page.html
@@ -1,6 +1,6 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
+    <ion-tab-button tab="devicesList" href="/tabs/devicesList">
       <ion-icon aria-hidden="true" name="radio-outline"></ion-icon>
       <ion-label>Visualização</ion-label>
     </ion-tab-button>
@@ -9,10 +9,14 @@
       <ion-icon aria-hidden="true" name="map-outline"></ion-icon>
       <ion-label>Mapa</ion-label>
     </ion-tab-button>
-
+    <ion-tab-button tab="tab4" href="/tabs/tab4">
+      <ion-icon aria-hidden="true" name="person-outline"></ion-icon>
+      <ion-label>Usuário</ion-label>
+    </ion-tab-button>
     <ion-tab-button tab="tab3" href="/tabs/tab3">
       <ion-icon aria-hidden="true" name="settings-outline"></ion-icon>
       <ion-label>Configurações</ion-label>
     </ion-tab-button>
+
   </ion-tab-bar>
 </ion-tabs>
