--- a/FishFinder/src/app/sensor-info-row/sensor-info-row.component.html
+++ b/FishFinder/src/app/sensor-info-row/sensor-info-row.component.html
@@ -1,1 +1,5 @@
-<div>Informações Bluetooth</div>
+<div class="info-row">
+    <ion-icon name="wifi" class="icon"></ion-icon>
+    <ion-icon name="locate" class="icon"></ion-icon>
+    <ion-icon name="battery-charging" class="icon"></ion-icon>
+</div>
