--- a/FishFinder/src/app/devices-list/connect-sensor-modal/connect-sensor-modal-item/connect-sensor-modal-item.component.html
+++ b/FishFinder/src/app/devices-list/connect-sensor-modal/connect-sensor-modal-item/connect-sensor-modal-item.component.html
@@ -1,1 +1,4 @@
-<ion-button (click)="connect()">Conectar</ion-button>
+<ion-item>
+    <ion-label>{{ bleDevice.name }}</ion-label>
+    <ion-button slot="end" (click)="connect()">Conectar</ion-button>
+  </ion-item>
