--- a/FishFinder/src/app/devices-list/device-list-item/device-list-item.component.html
+++ b/FishFinder/src/app/devices-list/device-list-item/device-list-item.component.html
@@ -1,12 +1,16 @@
 <ion-item>
-  <ion-icon name="play" slot="start"></ion-icon>
-  <ion-label>{{ sensor.name }}</ion-label>
+  <ion-buttons>
+    <ion-button (click)="viewSensorData(sensor)">
+      <ion-icon name="play" slot="start"></ion-icon>
+      <ion-label>{{ sensor.name }}</ion-label>
+    </ion-button>
+  </ion-buttons>
   <ion-buttons slot="end">
     <ion-button (click)="editSensor(sensor)">
       <ion-icon name="create"></ion-icon>
     </ion-button>
     <ion-button (click)="deleteSensor(sensor)">
-      <ion-icon name="ellipsis-vertical"></ion-icon>
+      <ion-icon name="trash"></ion-icon>
     </ion-button>
   </ion-buttons>
 </ion-item>
