--- a/FishFinder/src/app/sensor-info-row/sensor-info-row.component.scss
+++ b/FishFinder/src/app/sensor-info-row/sensor-info-row.component.scss
@@ -1,7 +1,15 @@
-div {
+.info-row {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     text-align: center;
     width: 100%;
     height: 40px;
     z-index: 99999999;
-    background-color: green;
-}
+    background-color: rgb(80, 72, 189);
+    color: white;
+  }
+  
+  .icon {
+    font-size: 24px;
+  }
