--- a/FishFinder/src/app/tab4/tab4.page.html
+++ b/FishFinder/src/app/tab4/tab4.page.html
@@ -1,13 +1,22 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>tab4</ion-title>
+    <ion-title>
+      Sign Up / Sign In
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">tab4</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <div class="profile-pic-container">
+    <ion-icon name="person-circle-outline" class="profile-pic"></ion-icon>
+  </div>
+
+  <h2 class="signup-message">
+    Sem cadastro. <strong>Cadastrar agora</strong>
+  </h2>
+
+  <h3 class="signin-message">
+    <ion-icon name="fish-outline"></ion-icon>
+    Já tem conta? <strong>Entrar</strong>
+  </h3>
 </ion-content>
