--- a/FishFinder/src/app/tabs/tabs.page.html
+++ b/FishFinder/src/app/tabs/tabs.page.html
@@ -2,7 +2,7 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="devicesList" href="/tabs/devicesList">
       <ion-icon aria-hidden="true" name="radio-outline"></ion-icon>
-      <ion-label>Visualização</ion-label>
+      <ion-label>Sensores</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2" href="/tabs/tab2">
