--- a/FishFinder/src/app/tab4/tab4.page.html
+++ b/FishFinder/src/app/tab4/tab4.page.html
@@ -12,11 +12,11 @@
   </div>
 
   <h2 class="signup-message">
-    Sem cadastro. <strong>Cadastrar agora</strong>
+    Sem cadastro. <br> <strong>Cadastrar agora</strong>
   </h2>
 
   <h3 class="signin-message">
     <ion-icon name="fish-outline"></ion-icon>
-    Já tem conta? <strong>Entrar</strong>
+    &nbsp;Já tem conta?&nbsp;<strong> Entrar</strong>
   </h3>
 </ion-content>
